# Quick

./: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
html/mywebview/: index.html  script.js
html/upload-user-content/: index.html  script.js
res/cmake/console/: CMakeLists.txt  main.cpp
res/cmake/cs/console/: CMakeLists.txt
res/cmake/cs/console/Properties/: AssemblyInfo.cs
res/cmake/cs/lib/: CMakeLists.txt  Class1.cs
res/cmake/cs/lib/Properties/: AssemblyInfo.cs
res/cmake/cs/wpf/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
res/cmake/cs/wpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
res/cmake/ftxui/: CMakeLists.txt  main.cpp
res/cmake/qtWidgets/: CMakeLists.txt
res/cmake/view/: Application.cpp.win  Application.h.dlg  Application.h.win  CMakeLists.txt.win
res/cmake/view/Dialog/: Application.cpp  CMakeLists.txt  resource.h
res/cmake/view/View/: Button.cpp  CheckBox.cpp  ComboBox.cpp  D2DRenderer.cpp  D2DRenderer.h  DialogItem.cpp  ProgressBar.cpp  ProgressBar.h  Slider.cpp  Slider.h  Spin.cpp  Spin.h  StatusBar.cpp  StatusBar.h  View.cpp  View.h  Window.cpp
res/cmake/view/Window/: CMakeLists.txt
res/cmake/win32/Dialog/: App.cpp  AppDialog.cpp  AppDialog.h  Application.rc  CMakeLists.txt  MainDialog.cpp  MainDialog.h  main.cpp
res/cmake/win32/W32/: ComboBox.h
res/cmake/win32/Window/: App.h  AppWindow.cpp  AppWindow.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
res/cmake/wpf/Properties/: AssemblyInfo.cs
res/electron/: _gitignore  eslint.config.mjs  package-lock.json  package-lock.json_  package.json  package.json_  tsconfig.json  tsconfig.json_
res/electron/css/: about.css  index.css  menu.css  status.css  title.css
res/electron/html/: about.html  about_title.html  content_img.html  content_mp4.html  index.html  index_title.html  menu_color.html  menu_file.html  menu_help.html  menu_option.html  title.html
res/electron/src/: about.ts  about.ts_  content.ts  content.ts_  content_img.ts_  content_mp4.ts_  dynamic.ts  dynamic.ts_  index.ts  index.ts_  index_title.ts_  main.ts  menu.ts  menu.ts_  module.ts  module.ts_  new_module.ts_  status.ts  title.ts  title.ts_
res/nodejs/: _package.json  package.json
src/: clean.ts  cmake.ts  config.ts  copy.ts  designer.ts  electron.ts  extension.ts  housekeep.ts  mywebview.ts  nodejs.ts  submodule.ts  thread.ts  threads.test.ts  threads.ts  unchange.ts  upload.ts  workspace.ts
src/test/suite/: threads.test.ts
